# collatz-fun

./: CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  devcontainer.json
libraries/corelib/include/: CollatzSolver.hpp  Dictionary.hpp  IDictionary.hpp
tests/: CMakeLists.txt
tests/unittests/: CollatzSolverTests.cxx  DictionaryTests.cxx  IDictionaryTests.cxx  IntegrationTests.cxx  MockDictionary.cxx  MockDictionary.hpp
